# spectroscopy-auc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: main.py
src/processing/: extractor.py  integrator.py
src/simulation/: generator.py  sensor.py
src/ui/: app.py
src/utils/: visualization.py
tests/: generate_test_dataset.py  test_extractor.py  test_integrator.py  test_performance.py
